Bug 966002 - Buffer async events to media elements while event delivery is paused like we do for sync events. r=roc